--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "akaunting/laravel-money": "^3.1",
         "almasaeed2010/adminlte": "~3.2",
         "barryvdh/laravel-dompdf": "^2.0",
+        "carlos-meneses/laravel-mpdf": "^2.1",
         "encore/laravel-admin": "1.8.9",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
